# mmcif-validator

./: .gitignore  README.md
.github/workflows/: pypi-publish.yml  release-vscode-extension.yml
vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json  pdbe-mmcif-validator-0.1.6.vsix
vscode-extension/python-script/: README.md  cif_parser.py  deposition_readiness.py  dict_parser.py  download.py  metadata_completeness.py  mmcif_types.py  protocol.py  pyproject.toml  validate_mmcif.py  validator.py
vscode-extension/python-script/completeness/: mandatory_categories.py
vscode-extension/src/: config.ts  depositionView.ts  dictionary.ts  extension.ts  hover.ts  types.ts  validation.ts
vscode-extension/syntaxes/: cif.tmLanguage.json
